# health-without-borders

./: .dockerignore  .env.example  .gcloudignore  .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_CHARTER.md  README.md  SECURITY.md  cloudbuild.pr.yaml  cloudbuild.yaml  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  pytest.ini  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy-cloud-run.yml  docs.yml
app/: init_db.py  main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: catalogs.py  login.py  organizations.py  patients.py  users.py
app/core/: config.py  logging.py  security.py
app/db/: base.py  models.py  session.py
app/schemas/: catalog.py  organization.py  patient.py  token.py  user.py
app/services/: catalog_service.py  fhir_service.py  gcp_service.py  hl7_service.py  patient_service.py
app/services/fhir/: __init__.py  base.py  factory.py  gcp.py  noop.py
app/services/llm/: __init__.py  base.py  factory.py  gemini.py  noop.py  prompts.py  schemas.py  service.py
architecture/ai-integration/: index.html
architecture/fhir-rda/: index.html
data_science/scripts/: load_catalogs.py
development/qa-plan/: index.html
development/remediation-program/: index.html
development/setup/: index.html
docs/: README.md  index.md
docs/architecture/: ai-integration.md  fhir-rda.md  hl7-mapping.md  hl7v2-strategy.md
docs/development/: qa-plan.md  remediation-program.md  setup.md
docs/infrastructure/: database.md  gcp-deploy.md  healthcare-api.md  iso27001-technical-mapping.md  security.md
infrastructure/database/: index.html
infrastructure/gcp-deploy/: index.html
infrastructure/healthcare-api/: index.html
infrastructure/iso27001-technical-mapping/: index.html
infrastructure/security/: index.html
scripts/: create_first_user.py  create_generic_user.py  create_tables.py  load_catalogs.py
search/: search_index.json
tests/: conftest.py
tests/api/v1/: test_login.py  test_organizations.py  test_patients.py  test_users.py
